# no-fluff-meta

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: quality_checks.yml
analysis/: data_exploration.ipynb
it_jobs_meta/: __main__.py
it_jobs_meta/common/: cli.py  utils.py
it_jobs_meta/dashboard/: dashboard.py  dashboard_components.py  data_provision.py  layout.py
it_jobs_meta/dashboard/assets/: styles.css
it_jobs_meta/data_pipeline/: data_etl.py  data_formats.py  data_ingestion.py  data_lake.py  data_pipeline.py  data_validation.py  geolocator.py
it_jobs_meta/data_pipeline/test/: test_data_etl.py  test_data_ingestion.py
tests/: fetch_sample_dataset.py  test_data_ingestion.py
